2004-03-04  Atsushi Enomoto <atsushi@ximian.com>

	* KeyInfo.cs :
	  Fixed LoadXml() to skip text nodes as MS.NET does.
	  Uncommented out RSAKeyValue.
	* Signature.cs : Fixed LoadXml(). Don't use GetElementsByTagName()
	  that incorrectly acquires descendants. Throw CryptographicException
	  if required elements were not found.
	* Transform.cs : added internal GetResolver().
	* XmlDsigXPathTransform.cs,
	  XmlDsigXsltTransform.cs : use XmlResolver.

2004-02-19  Tim Coleman <tim@timcoleman.com>
	* SymmetricKeyWrap.cs:
		Add AES Key Wrap
	* EncryptedXml.cs:
		Add calls to SymmetricKeyWrap

2004-02-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Reference.cs: Added LoadInnerXml to transforms. Removed unused 
	variable.
	* Transform.cs: Import GetInnerXml in GetXml.
	* XmlDsigBase64Transform.cs: Now use a StreamWriter to avoid multiple
	allocations.
	* XmlDsigC14NTransform.cs: Added Stream support to LoadInput
	* XmlDsigXPathTransform.cs: Fixed GetInnerXml to include xpath 
	expression and LoadInput. It nows match MS implementation but doesn't
	work like I think it should (but neither is MS implementation).

2004-02-10  Tim Coleman <tim@timcoleman.com>
	* DataReference.cs EncryptedKey.cs EncryptedXml.cs
	* KeyInfoEncryptedKey.cs KeyReference.cs ReferenceList.cs
	* X509IssuerSerial.cs XmlDecryptionTransform.cs:
		Add new classes for Xml Encryption in 1.2
	* CipherData.cs CipherReference.cs EncryptedData.cs
	* EncryptedReference.cs EncryptionMethod.cs EncryptionProperty.cs :
		Change NamespaceURI reference to EncryptedXml class.
		Make compliant with 1.2
	* XmlEncryption.cs:
		Add new entity names.


2004-02-07  Tim Coleman <tim@timcoleman.com>
	* CipherData.cs CipherReference.cs EncryptedData.cs
	* EncryptedReference.cs EncryptedType.cs EncryptionMethod.cs
	* EncryptionProperties.cs EncryptionProperty.cs XmlEncryption.cs:
		New classes added for Xml Encryption in 1.2
	* KeyInfoRetrievalMethod.cs:
		Added Type attribute for 1.2
	* XmlSignature.cs: